--- a/css/waterfull.css
+++ b/css/waterfull.css
@@ -20,10 +20,10 @@
 .items>.intro {
     color: rgba(0, 0, 0, 0.7);
 }
-.ct {
+.wrapper {
     position: relative;
 }
-.bottom {
+.bottom2 {
     opacity: 0;
 }
 .standardWidth {
