--- a/css/weather.css
+++ b/css/weather.css
@@ -13,7 +13,7 @@
 body {
     height: 100%;
     color: white;
-    background: url('../img/风景6-模糊.jpg');
+    background: #72abf3;
 }
 .wrapper {
     min-width: 550px;
@@ -71,9 +71,14 @@ body {
     margin-left: 20px;
 }
 .wrapper .location>.position {
+    position: relative;
     text-align: right;
     font-size: 18px;
     color: white;
+    width: 200px;
+    overflow: hidden;
+    height: 160px;
+    flex-shrink: 0;
 }
 .wrapper .location>.position>.icon-064dangqianweizhi:before {
     font-size: 52px;
@@ -81,36 +86,28 @@ body {
     opacity: 0.5; 
 }
 .time {
-    position: relative;
-    cursor: pointer;
-    opacity: 0.8; 
+    padding-top: 8px;
 }
 .tfhourct {
     position: absolute;
-    top: 120%;
-    left: 0%;
-    width: 120px;
-    border-radius: 5px;
-    background: rgba(255,255,255,0.6);
-    box-shadow: 0 0 14px rgba(0,0,0,0.3),0 0 8px rgba(0,0,0,0.5); 
-    display: none;
-    padding: 10px 5px;
+    cursor: pointer;
+    width: 210px;
+    right: -165px;
+    height: 35px;
 }
-.tfhourct:before {
-    content: "";
-    border-left: 5px solid white;
-    border-right: 5px solid white;
-    border-bottom: 5px solid rgba(255,255,255,0.6);
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
+.tfhourct>.tfhour {
+    padding: 8px 10px;
+    vertical-align: middle;
 }
-.time:hover>.tfhourct {
-    display: block;
+.tfhourct>.handoup,
+.tfhourct>.tfhourChange {
+    font-size: 36px;
+    vertical-align: middle;
 }
 .wrapper>.content>.nav {
     display: flex;
     margin-left: -30px;
+    cursor: pointer;
 }
 .wrapper>.content .btnct {
     margin-top: 15px;
@@ -130,12 +127,7 @@ body {
     font-size: 26px;
     display: inline-block;
     color: white;
-    vertical-align: middle;
-}
-.wrapper>.content>.nav .navlink {
-    display: inline-block;
-    margin-left: 5px;
-    color: white;
+    margin-right: 5px;
     vertical-align: middle;
 }
 .nav>li:first-of-type {
@@ -212,4 +204,40 @@ body {
 .next:hover,
 .pre:hover {
     opacity: 0.8; 
+}
+
+
+
+/* waterfall css */
+.items,
+.standardWidth {
+    display: block;
+    position: absolute;
+    width: 250px;
+    transition: all .5s;
+    text-decoration: none;
+    color: black;
+    padding: 10px; 
+    border: 1px solid #ccc;
+}
+.items>img {
+    width: 250px;
+}
+.items>.title {
+    border-bottom: 1px solid #ccc;
+    margin: 0;
+    padding: 15px 0;
+}
+.items>.intro {
+    color: rgba(0, 0, 0, 0.7);
+}
+.weatherDay {
+    position: relative;
+}
+.bottom {
+    opacity: 0;
+}
+.standardWidth {
+    display: none;
+    border: none;
 }
