--- a/css/weather.css
+++ b/css/weather.css
@@ -191,11 +191,21 @@ body {
     width: 40px;
     margin-top: 7px;
 }
+.wrapper>.top {
+    position: fixed;
+    top: 80%;
+    left: 85%;
+    cursor: pointer;
+    font-size: 36px;
+    opacity: 0.5;
+    color: white;
+}
 .content>.nav>.btnct>li.action,
 .content>.next.action,
 .content>.pre.action,
 .wrapper>.content>.nav>li.action,
-.time:hover  {
+.time:hover,
+.wrapper>.top:hover {
     opacity: 1;
 }
 .wrapper .location>.position>.icon-064dangqianweizhi:hover,
@@ -229,7 +239,8 @@ body {
     padding: 15px 0;
 }
 .items>.intro {
-    color: rgba(0, 0, 0, 0.7);
+    color: white;
+    margin-top: 15px;
 }
 .weatherDay {
     position: relative;
